--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,3 +2,34 @@ body {
   text-align: center;
   font-family: Helvetica, sans-serif;
 }
+
+.header {
+  background-image: url("resources/pictures/the-flatiron-building.png");
+}
+
+h1 {
+font-size: 70px;
+font-weight: bold;
+color: white;
+}
+
+h2 {
+font-size: 32px;
+font-weight: bold;
+}
+
+h3 {
+  font-size: 23px;
+  font-weight: bold;
+}
+
+.list {
+font-size: 18px;
+color: white;
+}
+
+.footer {
+font-size: 11px;
+color: white;
+background-color: dimgray;
+}
