--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .header {
-  background-image: url("resources/pictures/the-flatiron-building.png");
+  background-image: url("../pictures/background.png");
 }
 
 h1 {
@@ -23,13 +23,25 @@ h3 {
   font-weight: bold;
 }
 
+.headerTwo {
+  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+  font-size: 23px;
+  font-weight: bold;
+  color: white;
+}
 .list {
 font-size: 18px;
 color: white;
+text-decoration: underline;
 }
 
 .footer {
 font-size: 11px;
 color: white;
 background-color: dimgray;
+text-align: left;
+}
+
+p {
+  font-size: 14px;
 }
